[metadata]
name = python-watcher_metering
summary = Metering library for Watcher
author = Vincent FRANCOISE
author_email = Vincent.FRANCOISE@b-com.com
description-file = README.rst
home-page = http://factory.b-com.com/www/watcher/watcher/doc/build/html/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    watcher_metering
data_files =
    etc/ = etc/*

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
oslo.config.opts =
    watcher_metering.agent = watcher_metering.agent.opts:list_opts
    watcher_metering.publisher = watcher_metering.publisher.opts:list_opts
    watcher_metering.store = watcher_metering.store.opts:list_opts
console_scripts =
    watcher-metering-agent = watcher_metering.agent.app:start_agent
    watcher-metering-publisher = watcher_metering.publisher.app:start_publisher
metrics_store =
    riemann = watcher_metering.store.riemann:RiemannClient
    ceilometer = watcher_metering.store.ceilometer:CeilometerClient
    influxdb = watcher_metering.store.influxdb:InfluxClient

[build_sphinx]
source_dir = doc/source
build_dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html


[compile_catalog]
directory = watcher_metering/locale
domain = watcher_metering

[update_catalog]
domain = watcher_metering
output_dir = watcher_metering/locale
input_file = watcher_metering/locale/watcher_metering.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = watcher_metering/locale/watcher_metering.pot

[bdist_wheel]
universal = 1
